@@ -5575,7 +5575,8 @@ CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_MODVERSIONS=y
 # CONFIG_MODULE_SRCVERSION_ALL is not set
-CONFIG_MODULE_SIG=y
+#. This is overridden if the [build]signed-modules setting is enabled
+# CONFIG_MODULE_SIG is not set
 #. Signature validation is a run-time option
 # CONFIG_MODULE_SIG_FORCE is not set
 #. Signatures are added in linux-signed
