@@ -31,6 +31,7 @@ linux (4.6.1-1~exp1) UNRELEASED; urgency=medium
   * debian/control: Drop obsolete versioned Depends and Breaks
   * linux-libc-dev: Drop obsolete Replaces/Conflicts with linux-kernel-headers
   * debian/control: Update policy version to 3.9.8; no changes required
+  * Disable MODULE_SIG for architectures not supported by linux-signed
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sat, 04 Jun 2016 18:33:11 +0100
 
